@@ -1,7 +1,7 @@
-/* $Id: views.css,v 1.11.6.3 2010-01-28 17:16:40 merlinofchaos Exp $ */
+/* $Id: views.css,v 1.11.6.4 2010-03-12 00:25:30 merlinofchaos Exp $ */
 .views-exposed-form .views-exposed-widget {
-  float: left;
-  padding: .5em 1em 0 0;
+  float: left; /* LTR */
+  padding: .5em 1em 0 0; /* LTR */
 }
 
 .views-exposed-form .views-exposed-widget .form-submit {
